Fixes some game logic problems

--- a/index.html
+++ b/index.html
@@ -93,7 +93,14 @@
         <div id="face-up-deck">
         </div>
     </div> -->
-    
+    <div id='themes-controller-wrapper'>
+        <h3>Dark Mode</h3>
+        <label class="switch">
+            
+            <input id="dark-mode-btn"type="checkbox">
+            <span class="slider round"></span>
+          </label>
+    </div>
     <button id="play-btn">Play</button>
     <div id="gameBoard">
         <div id="gameHeader">
