--- a/index.html
+++ b/index.html
@@ -100,7 +100,23 @@
             <input id="dark-mode-btn"type="checkbox">
             <span class="slider round"></span>
           </label>
-    </div>
+          <h3> Select Your Card Style:</h3>
+          <div id ="card-back-controller-green">
+
+          </div>    
+          <div id ="card-back-controller-yellow">
+
+          </div>    
+          <div id ="card-back-controller-red">
+
+          </div>    
+          <div id ="card-back-controller-grey">
+
+          </div>    
+          <div id ="card-back-controller-purple">
+
+          </div>    
+        </div>
     <button id="play-btn">Play</button>
     <div id="gameBoard">
         <div id="gameHeader">
