Listener rebuild in progress - Listener is delegated to items we want to manipulate

--- a/index.html
+++ b/index.html
@@ -115,7 +115,13 @@
           </div>    
           <div id ="card-back-controller-purple">
 
-          </div>    
+          </div> 
+          <div id ="card-back-controller-willow">
+
+        </div>    
+        <div id ="card-back-controller-lyra">
+
+        </div>    
         </div>
     <button id="play-btn">Play</button>
     <div id="gameBoard">
