Working ace to deck and subsequent cards of the same suite to side ecks

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <script defer src="js/main.js"></script>
 </head>
-<body>
+<body id="body-element">
     <!-- <div id="gameBoard">
         <div id="column7">
             <br>
