--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>Dark Mode</h3>
         <label class="switch">
             
-            <input id="dark-mode-btn"type="checkbox">
+            <input id="dark-mode-btn"type="checkbox" checked>
             <span class="slider round"></span>
           </label>
           <h3> Select Your Card Style:</h3>
